fix printWinner